Fixed nav menu not being scrollable when overflowing beyond the screen

--- a/src/main.css
+++ b/src/main.css
@@ -325,6 +325,7 @@ a.externalLink::after {
   transform: scaleY(1);
   transform-origin: top;
   transition: transform 0.3s ease, visibility 0.3s ease;
+  overflow: auto;
   background-color: forestgreen;
 }
 #navMenu.collapsed {
